--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,59 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.17.1/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.17.1/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.17.1/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/9.17.1/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/9.17.1/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/9.17.1/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/9.17.1/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/9.17.1/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/9.17.1/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/9.17.1/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
+	<head>
+		<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi">
+		<title>Students for humane technology!</title>
+		<link href="https://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet">
+		<link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+		<link rel = "icon" href="./logo.png" type="image/x-icon">
+		<script src="js/fades.js" defer></script>
+	<head/>
+	<body>
+		<div class="img-wrapper">
+			<div class="one" style="background-image: url(./img/train-gb539577f6_1920.jpg);"></div>
+			<div class="two" style="background-image: url(./img/cigar-1837050.jpg);"></div>
+			<div class="three" style="background-image: url(./img/landscape-gd6b227fe9_1920.jpg);"></div>
+			<div class="four" style="background-image: url(./img/woman-5779323_1920.jpg);"></div>
+			<div class="five" style="background-image: url(./img/train-gb539577f6_1920.jpg);"></div>
+		</div>
+		<header id="navbar">
+			<h2 id="about"><a href="https://forms.gle/TLifBYoSHNwsT9hz9">Join</a></h2>
+			<h1><a href="./index.html">Students for Humane Technology</a></h1>
+			<h2 id= "calendar"><a href="./calendar.html">Calendar</a></h2>
+		</header>
+		<div id="main">
+			<div class="pv-block">
+				<div class='space'></div>
+				<div class='textblock' id="one">
+					<h2 id="title">The new social movement</h2>
+					<p>As the youth, we have been disproportionately affected by the attention-based business models of the largest tech companies. We've had enough.</p>
+				</div>
+			</div>
+			<div class="pv-block">
+				<div class='textblock' id="two">
+					<h2 id="title">The problem</h2>
+					<p>• Social media companies make money by selling our time, attention, and information:</br>working to addict us to their services and maximize engagement on every post.</br></br>• This business model has wrought mental illness, loneliness, and political polarization on a global scale, with no signs of slowing down.</br></br>• We aim to influence the system through organized boycotts, public pressure, and signal-boosting safer alternatives.</p>
+				</div>
+			</div>
+			<div class="pv-block">
+				<div class='textblock' id="three">
+					<h2 id="title">Power in numbers</h2>
+					<p>We are claiming back our agency by working together. Is there a specific website or app that is taking away your time? <a href="./calendar.html">Here</a> is a community of people with the exact same goals.</p>
+				</div>
+			</div>
+			<div class="pv-block">
+				<div class='textblock' id="four">
+					<h2 id="title">Blue skies</h2>
+					<p>As much as it has so far been used against us, technology can be used for good. By bringing these issues into the public eye on campus and beyond, we're working towards a future where technlogy works for EVERYONE's best interests.</p>
+				</div>
+			</div>
+			<div class="pv-block">
+				<div class='textblock' id="five">
+					<h2 id="title">Interested?</h2>
+					<p>UCF students can join the club through this simple form: <a href="https://forms.gle/TLifBYoSHNwsT9hz9">https://forms.gle/TLifBYoSHNwsT9hz9</a></p>
+				</div>
+			</div>
+		</div>
+		
+	</body>
 </html>
